# Repo2RLEnv

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  audit.md  blog-harbor-101.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
datasets/click-pr-runtime/pallets__click-3266/: instruction.md  task.toml
datasets/click-pr-runtime/pallets__click-3299/: instruction.md  task.toml
datasets/click-pr-runtime/pallets__click-3304/: instruction.md  task.toml
datasets/click-pr-runtime/pallets__click-3328/: instruction.md  task.toml
datasets/click-pr-runtime/pallets__click-3330/: instruction.md  task.toml
datasets/click-pr-runtime/pallets__click-3343/: instruction.md  task.toml
datasets/click-pr-runtime/pallets__click-3363/: instruction.md  task.toml
datasets/click-pr-runtime/pallets__click-3364/: instruction.md  task.toml
datasets/click-pr-runtime/pallets__click-3371/: instruction.md  task.toml
datasets/click-pr-runtime/pallets__click-3373/: instruction.md  task.toml
docs/: AGENTS.md  API.md  BOOTSTRAP.md  README.md  SPEC.md  index.md  quickstart.md
docs/contributing/: ADDING_A_PIPELINE.md
docs/pipelines/: ADDING_A_PIPELINE.md  README.md  code_instruct.md  commit_runtime.md  cve_patches.md  equivalence_tests.md  mutation_bugs.md  pr_diff.md  pr_mining.md  pr_mining_lite.md  pr_runtime.md  pr_stream.md  refactor_synthesis.md
docs/reference/: AGENTS.md  API.md  AUTH.md  BOOTSTRAP.md  ENV.md  REGISTRY_AUTH.md  RELATED_WORK.md  REWARD_SCHEMA.md  SPEC.md
docs/release_notes/: v0.8.2.post3.md  v0.8.3.md
docs/release_notes/v0.8.3/: findings-code_instruct.md  findings-commit_runtime.md  findings-cve_patches.md  findings-equivalence_tests.md  findings-mutation_bugs.md  findings-pr_diff.md  findings-pr_runtime.md  findings-refactor_synthesis.md  report-all.md
docs/rfcs/: 0001-pr-diff.md  0002-pr-runtime.md  0003-commit-runtime.md  0004-code-instruct.md  0005-equivalence-tests.md  0006-cve-patches.md  0007-pr-to-env.md  0008-env-setup.md  0009-test-synthesis.md  0010-issue-runtime.md  README.md  TEMPLATE.md
examples/crabbox/: README.md  crabbox.sh  runner.py
scripts/: add_to_collection.sh  bootstrap_matrix.py  bootstrap_matrix.yaml  gen_equivalence_tests_100.sh  probe_llm_routes.py
scripts/v083/: README.md  aggregate.py  build_launch.py  repos.yaml  sweep.py
src/repo2rlenv/: __init__.py  auth.py  cli.py  git_local.py  github.py  gitlab.py  hub.py  llm.py  osv.py  provider.py  reward.py  sources.py
src/repo2rlenv/bootstrap/: __init__.py  agent.py  cache.py  docker.py  language.py  presets.py  prompts.py  runner.py  spec.py  ui.py
src/repo2rlenv/emitter/: harbor.py
src/repo2rlenv/log_parsers/: __init__.py  cargo_parser.py  go_parser.py  jest_parser.py  pytest_parser.py
src/repo2rlenv/pipelines/: __init__.py  _env_guard.py  _eval_script.py  _function_extractor.py  _mutation_operators.py  _oss_instruct.py  _poc_agent.py  _pr_diff_verifier.py  _pr_runtime_verifier.py  _rename_detector.py  (+14 more)
tests/: test_bootstrap_agent.py  test_bootstrap_cache.py  test_bootstrap_language.py  test_bootstrap_presets.py  test_bootstrap_robustness.py  test_bootstrap_runner.py  test_bootstrap_spec.py  test_cli_check_auth.py  test_cli_push_pull.py  test_e2e_hub_build.py  test_e2e_private.py  test_e2e_public.py  test_emitter.py  test_env_guard.py  test_eval_script.py  test_examples_crabbox.py  test_function_extractor.py  test_git_local.py  test_gitlab.py  test_grading.py  test_hub_metadata_read.py  test_language_compat.py  test_llm_fallback.py  test_log_parsers.py  test_log_parsers_polyglot.py  test_mutation_operators.py  test_oss_instruct_gates.py  test_oss_instruct_helpers.py  test_osv.py  test_pipeline_code_instruct.py  test_pipeline_commit_runtime.py  test_pipeline_contract.py  test_pipeline_cve_patches.py  test_pipeline_equivalence_tests.py  test_pipeline_mutation_bugs.py  test_pipeline_pr_diff.py  test_pipeline_pr_runtime.py  test_pipeline_pr_stream.py  test_pipeline_pr_to_env.py  test_pipeline_refactor_synthesis.py  (+6 more)
tests/registry/: test_auth.py  test_integration.py  test_naming.py  test_probe.py  test_probe_live.py  test_push.py  test_repo_creation.py  test_visibility.py
tests/scripts/: conftest.py  test_v083_harness.py
(+41 files in other folders)
