[project]
name = "repo2rlenv"
version = "0.1.0"
description = "Turn any repository into an RL environment for training and evaluation."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "adithya-s-k", email = "adithyaskolavi@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
    "llm",
    "reinforcement-learning",
    "rl",
    "synthetic-data",
    "agent",
    "harbor",
    "huggingface",
    "github",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface-hub>=1.13.0",
    "litellm>=1.83.14",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
repo2rlenv = "repo2rlenv.cli:main"

[project.urls]
Homepage = "https://github.com/adithya-s-k/Repo2RLEnv"
Repository = "https://github.com/adithya-s-k/Repo2RLEnv"
Issues = "https://github.com/adithya-s-k/Repo2RLEnv/issues"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
