[project]
name = "repo2rlenv"
version = "0.4.0"
description = "Turn any repository into an RL environment for training and evaluation."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "adithya-s-k", email = "adithyaskolavi@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
    "llm",
    "reinforcement-learning",
    "rl",
    "synthetic-data",
    "agent",
    "harbor",
    "huggingface",
    "github",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface-hub>=1.13.0",
    "litellm>=1.83.14",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
repo2rlenv = "repo2rlenv.cli:main"

[project.urls]
Homepage = "https://github.com/adithya-s-k/Repo2RLEnv"
Repository = "https://github.com/adithya-s-k/Repo2RLEnv"
Issues = "https://github.com/adithya-s-k/Repo2RLEnv/issues"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["references", "envs", "envs-*", "datasets", "plans"]

[tool.ruff.lint]
# A practical-not-pedantic preset for a research repo:
#   E,W  — pycodestyle (style)
#   F    — pyflakes (unused/undefined names)
#   I    — isort (import order)
#   B    — flake8-bugbear (likely-bug patterns)
#   UP   — pyupgrade (modern Python idioms)
#   SIM  — flake8-simplify (clearer rewrites)
#   RUF  — ruff-specific
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # line-length — formatter handles this; bare violations are usually doc strings
    "B008",   # function calls in defaults — Pydantic/Field idiom
    "SIM105", # try/except: pass — clearer than contextlib.suppress for fire-and-forget callbacks
    "SIM117", # nested with: — sometimes clearer than combined
    "RUF001", # ambiguous unicode in strings — em-dashes used intentionally
    "RUF002", # ambiguous unicode in docstrings — em-dashes used intentionally
    "RUF003", # ambiguous unicode in comments — em-dashes used intentionally
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]   # assert False in tests is fine

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
